Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ input::placeholder {
     font-size: 1.4rem;
     font-weight: 700;
     padding: 0.8rem 1rem;
-    margin-bottom: 15rem;
+    margin-bottom: 8rem;
     transition: ease-in-out 0.3s;
 }
 
